Add "Remove jQuery" guide

--- a/guides/v3.3.0/pages.yml
+++ b/guides/v3.3.0/pages.yml
@@ -230,6 +230,8 @@
   pages:
     - title: "Managing Dependencies"
       url: "managing-dependencies"
+    - title: "Removing jQuery"
+      url: "removing-jquery"
 
 - title: "Configuring Ember.js"
   url: 'configuring-ember'
