--- a/guides/v3.5.0/pages.yml
+++ b/guides/v3.5.0/pages.yml
@@ -54,14 +54,17 @@
       url: "classes-and-instances"
     - title: "Reopening Classes and Instances"
       url: "reopening-classes-and-instances"
+      isAdvanced: true
     - title: "Computed Properties"
       url: "computed-properties"
     - title: "Computed Properties and Aggregate Data"
       url: "computed-properties-and-aggregate-data"
     - title: "Observers"
       url: "observers"
+      isAdvanced: true
     - title: "Bindings"
       url: "bindings"
+      isAdvanced: true
     - title: "Enumerables"
       url: 'enumerables'
 
@@ -80,12 +83,15 @@
       url: "redirection"
     - title: "Preventing and Retrying Transitions"
       url: "preventing-and-retrying-transitions"
+      isAdvanced: true
     - title: "Loading / Error Substates"
       url: "loading-and-error-substates"
+      isAdvanced: true
     - title: "Query Parameters"
       url: "query-params"
     - title: "Asynchronous Routing"
       url: "asynchronous-routing"
+      isAdvanced: true
 
 - title: "Templates"
   url: 'templates'
@@ -110,8 +116,10 @@
       url: "input-helpers"
     - title: "Development Helpers"
       url: "development-helpers"
+      isAdvanced: true
     - title: "Writing Helpers"
       url: "writing-helpers"
+      isAdvanced: true
 
 - title: "Components"
   url: 'components'
@@ -126,6 +134,7 @@
       url: "wrapping-content-in-a-component"
     - title: "Customizing a Component's Element"
       url: "customizing-a-components-element"
+      isAdvanced: true
     - title: "Using Block Params"
       url: "block-params"
     - title: "Handling Events"
@@ -154,26 +163,34 @@
       url: "relationships"
     - title: "Pushing Records into the Store"
       url: "pushing-records-into-the-store"
+      isAdvanced: true
     - title: "Handling Metadata"
       url: "handling-metadata"
+      isAdvanced: true
     - title: "Customizing Adapters"
       url: "customizing-adapters"
+      isAdvanced: true
     - title: "Customizing Serializers"
       url: "customizing-serializers"
+      isAdvanced: true
 
 - title: "Application Concerns"
   url: 'applications'
   pages:
     - title: "Applications and Instances"
       url: "applications-and-instances"
+      isAdvanced: true
     - title: "Dependency Injection"
       url: "dependency-injection"
+      isAdvanced: true
     - title: "Initializers"
       url: "initializers"
+      isAdvanced: true
     - title: "Services"
       url: "services"
     - title: "The Run Loop"
       url: "run-loop"
+      isAdvanced: true
 
 - title: "Testing"
   url: 'testing'
@@ -248,8 +265,10 @@
       url: "embedding-applications"
     - title: "Feature Flags"
       url: "feature-flags"
+      isAdvanced: true
     - title: "Optional Features"
       url: "optional-features"
+      isAdvanced: true
     - title: "Build targets"
       url: "build-targets"
     - title: "Debugging"
@@ -257,6 +276,7 @@
 
 - title: "Contributing to Ember.js"
   url: 'contributing'
+  isAdvanced: true
   pages:
     - title: "Adding New Features"
       url: "adding-new-features"
