--- a/guides/v3.5.0/pages.yml
+++ b/guides/v3.5.0/pages.yml
@@ -38,7 +38,7 @@
       url: "ember-data"
     - title: "Building a Complex Component"
       url: "autocomplete-component"
-    - title: "Services and Utilities"
+    - title: "Services"
       url: "service"
     - title: "Adding Nested Routes"
       url: "subroutes"
