--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-ember": "^6.3.0",
     "eslint-plugin-import": "^2.16.0",
+    "gfm-code-blocks": "^1.0.0",
     "guidemaker": "^1.3.0",
     "guidemaker-ember-template": "^1.1.0",
     "loader.js": "^4.7.0",
