--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
+    "ember-cli-fastboot": "^2.0.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
@@ -58,10 +59,13 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-import": "^2.8.0",
+    "guidemaker": "^0.7.0",
+    "guidemaker-ember-template": "^0.5.1",
     "loader.js": "^4.7.0",
     "lodash": "^4.17.4",
     "markdown-link-extractor": "^1.1.1",
     "mocha": "^5.0.0",
+    "prember": "^1.0.2",
     "qunit-dom": "^0.8.0",
     "remark-cli": "^6.0.1",
     "remark-lint": "^6.0.4",
