--- a/package.json
+++ b/package.json
@@ -51,16 +51,18 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-percy": "^1.5.0",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.7.0",
+    "ember-test-selectors": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-import": "^2.8.0",
     "guidemaker": "^0.7.0",
-    "guidemaker-ember-template": "^0.5.2",
+    "guidemaker-ember-template": "^0.6.0",
     "loader.js": "^4.7.0",
     "lodash": "^4.17.4",
     "markdown-link-extractor": "^1.1.1",
