--- a/guides/v3.7.0/pages.yml
+++ b/guides/v3.7.0/pages.yml
@@ -288,3 +288,9 @@
   pages:
     - title: "Web Development"
       url: "web-development"
+
+- title: 'Reference'
+  url: 'reference'
+  pages:
+    - title: "Syntax Conversion Guide"
+      url: "syntax-conversion-guide"
