--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "ember-percy": "^1.5.0",
     "ember-qunit": "^4.3.0",
     "ember-resolver": "^5.0.1",
-    "ember-source": "^3.7.3",
+    "ember-source": "~3.7.3",
     "ember-test-selectors": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint": "^5.13.0",
