re-order and re-title table of contents (#392)

--- a/guides/release/pages.yml
+++ b/guides/release/pages.yml
@@ -68,32 +68,7 @@
     - title: "Enumerables"
       url: 'enumerables'
 
-- title: "Routing"
-  url: 'routing'
-  pages:
-    - title: "Introduction"
-      url: "index"
-    - title: "Defining Your Routes"
-      url: "defining-your-routes"
-    - title: "Specifying a Route's Model"
-      url: "specifying-a-routes-model"
-    - title: "Rendering a Template"
-      url: "rendering-a-template"
-    - title: "Redirecting"
-      url: "redirection"
-    - title: "Preventing and Retrying Transitions"
-      url: "preventing-and-retrying-transitions"
-      isAdvanced: true
-    - title: "Loading / Error Substates"
-      url: "loading-and-error-substates"
-      isAdvanced: true
-    - title: "Query Parameters"
-      url: "query-params"
-    - title: "Asynchronous Routing"
-      url: "asynchronous-routing"
-      isAdvanced: true
-
-- title: "Templates"
+- title: "Templating"
   url: 'templates'
   pages:
     - title: "Templating Basics"
@@ -148,7 +123,32 @@
     - title: "Introduction"
       url: "index"
 
-- title: "Models"
+- title: "Routing"
+  url: 'routing'
+  pages:
+    - title: "Introduction"
+      url: "index"
+    - title: "Defining Your Routes"
+      url: "defining-your-routes"
+    - title: "Specifying a Route's Model"
+      url: "specifying-a-routes-model"
+    - title: "Rendering a Template"
+      url: "rendering-a-template"
+    - title: "Redirecting"
+      url: "redirection"
+    - title: "Preventing and Retrying Transitions"
+      url: "preventing-and-retrying-transitions"
+      isAdvanced: true
+    - title: "Loading / Error Substates"
+      url: "loading-and-error-substates"
+      isAdvanced: true
+    - title: "Query Parameters"
+      url: "query-params"
+    - title: "Asynchronous Routing"
+      url: "asynchronous-routing"
+      isAdvanced: true
+
+- title: "Ember Data"
   url: 'models'
   pages:
     - title: "Introduction"
@@ -174,23 +174,11 @@
       url: "customizing-serializers"
       isAdvanced: true
 
-- title: "Application Concerns"
-  url: 'applications'
+- title: "Addons and Dependencies"
+  url: "addons-and-dependencies"
   pages:
-    - title: "Applications and Instances"
-      url: "applications-and-instances"
-      isAdvanced: true
-    - title: "Dependency Injection"
-      url: "dependency-injection"
-      isAdvanced: true
-    - title: "Initializers"
-      url: "initializers"
-      isAdvanced: true
-    - title: "Services"
-      url: "services"
-    - title: "The Run Loop"
-      url: "run-loop"
-      isAdvanced: true
+    - title: "Managing Dependencies"
+      url: "managing-dependencies"
 
 - title: "Testing"
   url: 'testing'
@@ -211,6 +199,50 @@
       url: "testing-routes"
     - title: "Testing Models"
       url: "testing-models"
+
+- title: "Configuration"
+  url: 'configuring-ember'
+  pages:
+    - title: "Configuring Your App"
+      url: "configuring-your-app"
+    - title: "Configuring Ember CLI"
+      url: "configuring-ember-cli"
+    - title: "Handling Deprecations"
+      url: "handling-deprecations"
+    - title: "Disabling Prototype Extensions"
+      url: "disabling-prototype-extensions"
+    - title: "Specifying the URL Type"
+      url: "specifying-url-type"
+    - title: "Embedding Applications"
+      url: "embedding-applications"
+    - title: "Feature Flags"
+      url: "feature-flags"
+      isAdvanced: true
+    - title: "Optional Features"
+      url: "optional-features"
+      isAdvanced: true
+    - title: "Build targets"
+      url: "build-targets"
+    - title: "Debugging"
+      url: "debugging"
+
+- title: "Application Concerns"
+  url: 'applications'
+  pages:
+    - title: "Applications and Instances"
+      url: "applications-and-instances"
+      isAdvanced: true
+    - title: "Dependency Injection"
+      url: "dependency-injection"
+      isAdvanced: true
+    - title: "Initializers"
+      url: "initializers"
+      isAdvanced: true
+    - title: "Services"
+      url: "services"
+    - title: "The Run Loop"
+      url: "run-loop"
+      isAdvanced: true
 
 - title: "Ember Inspector"
   url: "ember-inspector"
@@ -241,38 +273,6 @@
       url: "render-performance"
     - title: "Troubleshooting"
       url: "troubleshooting"
-
-- title: "Addons and Dependencies"
-  url: "addons-and-dependencies"
-  pages:
-    - title: "Managing Dependencies"
-      url: "managing-dependencies"
-
-- title: "Configuring Ember.js"
-  url: 'configuring-ember'
-  pages:
-    - title: "Configuring Your App"
-      url: "configuring-your-app"
-    - title: "Configuring Ember CLI"
-      url: "configuring-ember-cli"
-    - title: "Handling Deprecations"
-      url: "handling-deprecations"
-    - title: "Disabling Prototype Extensions"
-      url: "disabling-prototype-extensions"
-    - title: "Specifying the URL Type"
-      url: "specifying-url-type"
-    - title: "Embedding Applications"
-      url: "embedding-applications"
-    - title: "Feature Flags"
-      url: "feature-flags"
-      isAdvanced: true
-    - title: "Optional Features"
-      url: "optional-features"
-      isAdvanced: true
-    - title: "Build targets"
-      url: "build-targets"
-    - title: "Debugging"
-      url: "debugging"
 
 - title: "Contributing to Ember.js"
   url: 'contributing'
