--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.5.0",
     "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-prember-algolia": "^1.0.1",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-fastboot": "^2.0.3",
     "ember-cli-htmlbars": "^3.0.0",
