--- a/guides/v1.11.0/pages.yml
+++ b/guides/v1.11.0/pages.yml
@@ -17,7 +17,7 @@
   url: 'concepts'
   pages:
     - title: "Core Concepts"
-      url: "core-concepts"
+      url: "index"
     - title: "Naming Conventions"
       url: "naming-conventions"
     #- title: "What is Ember.js?"
@@ -33,7 +33,7 @@
   url: 'object-model'
   pages:
     - title: "Classes and Instances"
-      url: "classes-and-instances"
+      url: "index"
     - title: "Computed Properties"
       url: "computed-properties"
     - title: "Computed Properties and Aggregate Data with @each"
@@ -57,7 +57,7 @@
   url: 'templates'
   pages:
     - title: "The Application Template"
-      url: "the-application-template"
+      url: "index"
     - title: "Handlebars Basics"
       url: "handlebars-basics"
     - title: "Conditionals"
@@ -239,7 +239,7 @@
   url: 'configuring-ember'
   pages:
     - title: "Disabling Prototype Extensions"
-      url: "disabling-prototype-extensions"
+      url: "index"
     - title: "Embedding Applications"
       url: "embedding-applications"
     - title: "Feature Flags"
@@ -373,7 +373,7 @@
   url: 'understanding-ember'
   pages:
     - title: "The View Layer"
-      url: "the-view-layer"
+      url: "index"
     - title: "Managing Asynchrony"
       url: "managing-asynchrony"
     - title: "Debugging"
@@ -387,6 +387,6 @@
   url: 'contributing'
   pages:
     - title: "Adding New Features"
-      url: "adding-new-features"
+      url: "index"
     - title: "Repositories"
       url: "repositories"
