--- a/guides/v1.12.0/pages.yml
+++ b/guides/v1.12.0/pages.yml
@@ -17,7 +17,7 @@
   url: 'concepts'
   pages:
     - title: "Core Concepts"
-      url: "core-concepts"
+      url: "index"
     - title: "Naming Conventions"
       url: "naming-conventions"
     #- title: "What is Ember.js?"
@@ -33,7 +33,7 @@
   url: 'object-model'
   pages:
     - title: "Classes and Instances"
-      url: "classes-and-instances"
+      url: "index"
     - title: "Reopening Classes and Instances"
       url: "reopening-classes-and-instances"
     - title: "Computed Properties"
@@ -57,7 +57,7 @@
   url: 'templates'
   pages:
     - title: "Handlebars Basics"
-      url: "handlebars-basics"
+      url: "index"
     - title: "The Application Template"
       url: "the-application-template"
     - title: "Conditionals"
@@ -237,7 +237,7 @@
   url: 'configuring-ember'
   pages:
     - title: "Disabling Prototype Extensions"
-      url: "disabling-prototype-extensions"
+      url: "index"
     - title: "Embedding Applications"
       url: "embedding-applications"
     - title: "Feature Flags"
@@ -247,7 +247,7 @@
   url: "ember-inspector"
   pages:
     - title: "Installing the Inspector"
-      url: "installation"
+      url: "index"
     - title: "Object Inspector"
       url: "object-inspector"
     - title: "The View Tree"
@@ -397,7 +397,7 @@
   url: 'understanding-ember'
   pages:
     - title: "The View Layer"
-      url: "the-view-layer"
+      url: "index"
     - title: "Managing Asynchrony"
       url: "managing-asynchrony"
     - title: "Debugging"
@@ -411,6 +411,6 @@
   url: 'contributing'
   pages:
     - title: "Adding New Features"
-      url: "adding-new-features"
+      url: "index"
     - title: "Repositories"
       url: "repositories"
