--- a/guides/v1.13.0/pages.yml
+++ b/guides/v1.13.0/pages.yml
@@ -19,7 +19,7 @@
   url: 'object-model'
   pages:
     - title: "Classes and Instances"
-      url: "classes-and-instances"
+      url: "index"
     - title: "Reopening Classes and Instances"
       url: "reopening-classes-and-instances"
     - title: "Computed Properties"
@@ -39,7 +39,7 @@
   url: 'templates'
   pages:
     - title: "Handlebars Basics"
-      url: "handlebars-basics"
+      url: "index"
     - title: "The Application Template"
       url: "the-application-template"
     - title: "Conditionals"
@@ -177,7 +177,7 @@
   url: "ember-inspector"
   pages:
     - title: "Installing the Inspector"
-      url: "installation"
+      url: "index"
     - title: "Object Inspector"
       url: "object-inspector"
     - title: "The View Tree"
@@ -203,7 +203,7 @@
   url: 'configuring-ember'
   pages:
     - title: "Disabling Prototype Extensions"
-      url: "disabling-prototype-extensions"
+      url: "index"
     - title: "Embedding Applications"
       url: "embedding-applications"
     - title: "Feature Flags"
@@ -213,7 +213,7 @@
   url: 'understanding-ember'
   pages:
     - title: "Debugging"
-      url: "debugging"
+      url: "index"
     - title: "The Run Loop"
       url: "run-loop"
     - title: "Dependency Injection & Service Lookup"
@@ -223,6 +223,6 @@
   url: 'contributing'
   pages:
     - title: "Adding New Features"
-      url: "adding-new-features"
+      url: "index"
     - title: "Repositories"
       url: "repositories"
