fixing pages.yml for 2.2

--- a/guides/v2.2.0/pages.yml
+++ b/guides/v2.2.0/pages.yml
@@ -19,7 +19,7 @@
   url: 'tutorial'
   pages:
     - title: "Routes and Templates"
-      url: "routes-and-templates"
+      url: "index"
     - title: "The Model Hook"
       url: "model-hook"
     - title: "Ember Data"
@@ -73,7 +73,7 @@
   url: 'templates'
   pages:
     - title: "Handlebars Basics"
-      url: "handlebars-basics"
+      url: "index"
     - title: "Conditionals"
       url: "conditionals"
     - title: "Displaying a List of Items"
@@ -97,7 +97,7 @@
   url: 'components'
   pages:
     - title: "Defining a Component"
-      url: "defining-a-component"
+      url: "index"
     - title: "The Component Lifecycle"
       url: "the-component-lifecycle"
     - title: "Passing Properties to a Component"
@@ -145,7 +145,7 @@
   url: 'applications'
   pages:
     - title: "Applications and Instances"
-      url: "applications-and-instances"
+      url: "index"
     - title: "Dependency Injection"
       url: "dependency-injection"
     - title: "Initializers"
@@ -177,7 +177,7 @@
   url: "ember-inspector"
   pages:
     - title: "Installing the Inspector"
-      url: "installation"
+      url: "index"
     - title: "Object Inspector"
       url: "object-inspector"
     - title: "The View Tree"
@@ -203,13 +203,12 @@
   url: "addons-and-dependencies"
   pages:
     - title: "Managing Dependencies"
-      url: "managing-dependencies"
-
+      url: "index"
 - title: "Configuring Ember.js"
   url: 'configuring-ember'
   pages:
     - title: "Configuring Your App"
-      url: "configuring-your-app"
+      url: "index"
     - title: "Configuring Ember CLI"
       url: "configuring-ember-cli"
     - title: "Handling Deprecations"
@@ -229,6 +228,6 @@
   url: 'contributing'
   pages:
     - title: "Adding New Features"
-      url: "adding-new-features"
+      url: "index"
     - title: "Repositories"
       url: "repositories"
