--- a/guides/v2.6.0/pages.yml
+++ b/guides/v2.6.0/pages.yml
@@ -19,7 +19,7 @@
   url: 'tutorial'
   pages:
     - title: "Creating Your App"
-      url: "ember-cli"
+      url: "index"
     - title: "Setting Up Tests"
       url: 'acceptance-test'
     - title: "Routes and Templates"
@@ -87,7 +87,7 @@
   url: 'templates'
   pages:
     - title: "Handlebars Basics"
-      url: "handlebars-basics"
+      url: "index"
     - title: "Built-in Helpers"
       url: "built-in-helpers"
     - title: "Conditionals"
@@ -113,7 +113,7 @@
   url: 'components'
   pages:
     - title: "Defining a Component"
-      url: "defining-a-component"
+      url: "index"
     - title: "The Component Lifecycle"
       url: "the-component-lifecycle"
     - title: "Passing Properties to a Component"
@@ -161,7 +161,7 @@
   url: 'applications'
   pages:
     - title: "Applications and Instances"
-      url: "applications-and-instances"
+      url: "index"
     - title: "Dependency Injection"
       url: "dependency-injection"
     - title: "Initializers"
@@ -193,7 +193,7 @@
   url: "ember-inspector"
   pages:
     - title: "Installing the Inspector"
-      url: "installation"
+      url: "index"
     - title: "Object Inspector"
       url: "object-inspector"
     - title: "The View Tree"
@@ -219,13 +219,13 @@
   url: "addons-and-dependencies"
   pages:
     - title: "Managing Dependencies"
-      url: "managing-dependencies"
+      url: "index"
 
 - title: "Configuring Ember.js"
   url: 'configuring-ember'
   pages:
     - title: "Configuring Your App"
-      url: "configuring-your-app"
+      url: "index"
     - title: "Configuring Ember CLI"
       url: "configuring-ember-cli"
     - title: "Handling Deprecations"
@@ -245,7 +245,7 @@
   url: 'contributing'
   pages:
     - title: "Adding New Features"
-      url: "adding-new-features"
+      url: "index"
     - title: "Repositories"
       url: "repositories"
 
@@ -253,4 +253,4 @@
   url: "glossary"
   pages:
     - title: "Web Development"
-      url: "web-development"
+      url: "index"
